test/parser/channel/connect-015.hac
// "connect-015.hac"
// copy-modified from "connect-004.hac"
// should error out connecting two receive-only channels

defproc receivers(chan?(bool) a, b) {
	chan(bool) x, y;
	x = a;
	y = b;
	x = y;		// error
}

receivers z;

